[package]
name = "mandelbrot-ggez"
version = "0.2.0"
authors = ["eisendaniel <danieleisen99@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
num = "0.3.1"
# image = "0.23.13"
rayon = "1.5.0" 
ggez = "0.5.1"
palette = "0.5.0"

